--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,47 +5,46 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@drawable/login2"
     android:layout_height="match_parent"
     tools:context=".SignUpActivity">
-    <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="250dp">
-        <LinearLayout
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="280dp"
+        android:layout_height="60dp">
+        <com.google.android.material.textfield.TextInputEditText
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="textPersonName"
+            android:id="@+id/userNameSignUp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-            <EditText
-                android:id="@+id/userNameSignUp"
-                android:layout_width="260dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="40dp"
-                android:ems="10"
-                android:hint="Kullanıcı Adı"
-                android:inputType="textPersonName"
-                tools:layout_editor_absoluteX="103dp"
-                tools:layout_editor_absoluteY="167dp" />
-
-            <EditText
-                android:id="@+id/userPasswordSignUp"
-                android:layout_width="260dp"
-                android:layout_height="50dp"
-                android:ems="10"
-                android:hint="Şifre"
-                android:inputType="textPassword"
-                tools:layout_editor_absoluteX="103dp"
-                tools:layout_editor_absoluteY="248dp" />
-            <Button
-                android:id="@+id/btnKayıtOl"
-                android:layout_width="240dp"
-                android:layout_height="40dp"
-                android:text="Kayıt ol"
-                android:onClick="KayıtOl"
-                android:layout_marginTop="30dp"
-                android:background="@color/colorAccent"
-                />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            android:drawableLeft="@drawable/ic_person_black_24dp"
+            android:drawablePadding="10dp"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="280dp"
+        android:layout_height="60dp">
+        <com.google.android.material.textfield.TextInputEditText
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:id="@+id/userPasswordSignUp"
+            android:layout_width="match_parent"
+            android:drawableLeft="@drawable/ic_https_black_24dp"
+            android:drawablePadding="10dp"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/btnKayıtOl"
+        android:layout_width="260dp"
+        android:layout_height="40dp"
+        android:text="Sıgn Up"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:onClick="KayıtOl"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorAccent"
+        android:layout_marginBottom="20dp"
+        />
 
 </LinearLayout>
